src/layout.css
.main {
  display: flex;
  flex-flow: column;
  align-items: center;
}

.page {
  width: 360px;
  display: flex;
  flex-flow: column;
  padding: calc(var(--page-padding-mobile) / 2) var(--page-padding-mobile)
    var(--page-padding-mobile);
}

.page.intro {
  min-height: 100svh;
  justify-content: end;
}

.page.intro .content {
  text-align: center;
}

.page.intro .link-container {
  display: inline-block;
  margin: var(--page-padding-mobile) 0;
}

.page.intro .link-container + .link-container {
  margin-left: 16px;
}

.page > * {
  flex-shrink: 0;
  flex-grow: 0;
}

.title {
  margin-bottom: var(--page-padding-mobile);
}

.icon-with-text li img {
  margin-right: var(--icon-text-spacing);
  position: relative;
  top: 3px;
}

.portrait {
  height: 380px;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: start;
  margin-bottom: -16px;
}

.portrait img {
  width: 288px;
}

.scroll-indicator {
  height: var(--page-padding-mobile);
  width: var(--page-padding-mobile);
  position: fixed;
  left: calc(50% - var(--page-padding-mobile) / 2);
  bottom: 6px;
  opacity: 0;
  transition: opacity 200ms;
  animation: shake 3s linear infinite;
}

.scroll-indicator img {
  width: 100%;
}

.image {
  border: 1px solid var(--color-palette-3);
  border-radius: 6px;
}

@media print {
  .main {
    flex-flow: unset;
    align-items: unset;
    flex-wrap: wrap;
  }

  .page {
    flex-basis: 50%;
  }

  .page.intro {
    min-height: unset;
  }

  /* Hide link to PDF in PDF (for print) */
  .page.intro .link-container:has(a[href="cv.pdf"]) {
    display: none;
  }

  .icon-with-text {
    list-style-type: none;
  }
}

@media (min-width: 768px) {
  .page {
    width: 100%;
    max-width: 1440px;
    padding: calc(var(--page-padding-desktop) / 2) var(--page-padding-desktop)
      var(--page-padding-desktop);
    flex-flow: unset;
  }

  .page.intro {
    display: flex;
    align-items: end;
    flex-direction: row-reverse;
  }

  .page.intro .content {
    text-align: unset;
  }

  .page.intro .link-container {
    margin: unset;
  }

  .page > * {
    flex: 0 0 50%;
  }

  .content {
    /* Protect text from touching portrait */
    padding-right: calc(var(--page-padding-desktop) / 2);
  }

  .portrait {
    height: unset;
    justify-content: end;
  }

  .portrait img {
    position: fixed;
    bottom: 0;
    width: unset;
    max-height: calc(100svh - var(--page-padding-desktop));
    /* Ensure portrait is never wider than its container (which would overlap the content) */
    max-width: min(
      calc(100vw / 2 - var(--page-padding-desktop)),
      calc(1440px / 2 - var(--page-padding-desktop))
    );
  }

  .scroll-indicator {
    height: 36px;
    width: 36px;
    left: calc(50% - 36px / 2);
  }
}

@media (min-width: 1024px) {
  .title {
    margin-bottom: 36px;
  }
}

